# stoatpp

./: CMakeLists.txt  Containerfile  README.md  docs.md  ws_disconnect_research.md
examples/custom_prefix_bot/: CMakeLists.txt  main.cpp
examples/full_bot/: CMakeLists.txt  main.cpp
examples/moderation_bot/: CMakeLists.txt  main.cpp
examples/ping_bot/: CMakeLists.txt  main.cpp
examples/reaction_roles_bot/: CMakeLists.txt  main.cpp
include/stoatpp/: bot_module.h  client_config.h  cluster.h  event_handler.h  exceptions.h  gateway.h  rest.h  stoatpp.h
include/stoatpp/models/: attachment.h  ban.h  bot.h  channel.h  emoji.h  invite.h  member.h  message.h  permissions.h  role.h  server.h  system.h  user.h  user_settings.h  webhook.h
include/stoatpp/utils/: logger.h  paginator.h  ratelimiter.h  timestamp.h  ulid.h
src/: cluster.cpp  cluster_cache.cpp  cluster_commands.cpp  cluster_events.cpp  cluster_messaging.cpp  cluster_misc.cpp  cluster_moderation.cpp  event_handler.cpp  gateway.cpp  rest.cpp
src/utils/: logger.cpp  ratelimiter.cpp
